--- a/index.html
+++ b/index.html
@@ -33,8 +33,20 @@
                         <li class="nav-item"><a href="services.html" class="nav-link"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
                         </li>
-                        <li class="nav-item"><a href="about.html" class="nav-link"><i
-                                    class="fas fa-info-circle me-1"></i><span class="fw-bold">À propos</span></a></li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-info-circle me-1"></i>
+                                <span class="fw-bold">À propos</span>
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
+                                <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
+                                <li><a class="dropdown-item" href="values.html">Nos Valeurs</a></li>
+                                <li><a class="dropdown-item" href="history.html">Notre Histoire</a></li>
+                                <li><a class="dropdown-item" href="partners.html">Nos Partenaires</a></li>
+                            </ul>
+                        </li>
 
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
                                     class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
