--- a/index.html
+++ b/index.html
@@ -57,58 +57,50 @@
         </nav>
     </header>
 
-    <!-- HERO -->
-    <section class="hero-section bg-light py-5 text-center position-relative">
-        <div class="hero-bg"></div>
-        <div class="container position-relative z-1 hero-text-white">
-            <h1 class="display-5 fw-bold mb-3 fade-in-up">Votre santé, notre priorité</h1>
-            <p class="lead mb-4 fade-in-up">Une mutuelle de proximité, humaine et accessible à tous. Des
-                garanties
-                adaptées, un accompagnement personnalisé et des remboursements rapides.</p>
-            <a href="contact.html" class="btn btn-primary btn-lg px-4 fade-in-up"><i
-                    class="fas fa-user-plus me-2"></i>Demander un devis
-            </a>
+    <!-- HERO SECTION -->
+    <section class="hero-section bg-primary text-white py-5">
+        <div class="container text-center">
+            <h1 class="display-4 fw-bold mb-3">Mutuelle Santé LTD HEALTH CLUB</h1>
+            <p class="lead mb-4">La mutuelle qui prend soin de vous et de votre famille à Kinshasa.<br>
+                Des garanties adaptées, un accompagnement personnalisé et des remboursements rapides.</p>
+            <a href="contact.html" class="btn btn-light btn-lg px-4"><i class="fas fa-user-plus me-2"></i>Demander un
+                devis</a>
         </div>
-
     </section>
 
-    <!-- Message d'information LTD HEALTH CLUB -->
-    <div class="container my-4">
-        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center"
-            style="max-width: 900px;">
-            <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
-                <img src="images/booste.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
-                    style="max-width: 160px; max-height: 120px; object-fit: cover;">
-            </div>
-            <div class="w-100">
-                <p class="lead mb-4 text-center fade-in-up">
-                    LTD HEALTH CLUB interroge pour vous les partenaires les plus adaptés à vos besoins de couverture
-                    santé.<br>
-                    Choisir une mutuelle de santé, c’est trouver le juste équilibre entre vos cotisations mensuelles,
-                    vos économies, et
-                    votre tranquillité d’esprit face aux imprévus de la vie.<br>
-                    Le comparateur de LTD HEALTH CLUB sélectionne pour vous des centres et cliniques adaptés à votre
-                    profil, à des prix très
-                    raisonnables.
-                </p>
-                <div class="d-flex justify-content-center">
-                    <a href="services.html"
-                        class="btn btn-primary btn-lg d-inline-flex align-items-center gap-2 shadow fade-in-up px-4 py-2 rounded-pill">
-                        <i class="fas fa-concierge-bell fa-lg"></i>
-                        <span>Trouver un service ?</span>
-                    </a>
+    <!-- POURQUOI CHOISIR LTD HEALTH CLUB -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <img src="images/booste.jpg" alt="Pourquoi choisir LTD" class="img-fluid rounded-4 shadow">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="h3 fw-bold mb-3">Pourquoi choisir LTD HEALTH CLUB ?</h2>
+                    <ul class="list-unstyled fs-5">
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des tarifs accessibles
+                            pour tous</li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Un réseau de partenaires
+                            fiables</li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des remboursements rapides
+                        </li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Un accompagnement humain
+                            et personnalisé</li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des garanties adaptées à
+                            vos besoins</li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <!-- GARANTIES / SERVICES -->
+    <!-- NOS AVANTAGES -->
     <section class="py-5">
         <div class="container">
-            <h2 class="h3 text-center mb-4 fade-in-up">Nos garanties santé</h2>
+            <h2 class="h3 text-center mb-4 fw-bold">Nos avantages</h2>
             <div class="row g-4 justify-content-center">
-                <div class="col-md-4 fade-in-up">
-                    <div class="card h-100 text-center border-0 shadow-sm">
+                <div class="col-md-3 text-center">
+                    <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-hospital fa-2x text-primary mb-3"></i>
                             <h5 class="card-title">Hospitalisation</h5>
@@ -116,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 fade-in-up">
-                    <div class="card h-100 text-center border-0 shadow-sm">
+                <div class="col-md-3 text-center">
+                    <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-stethoscope fa-2x text-primary mb-3"></i>
                             <h5 class="card-title">Soins courants</h5>
@@ -125,8 +117,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 fade-in-up">
-                    <div class="card h-100 text-center border-0 shadow-sm">
+                <div class="col-md-3 text-center">
+                    <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-tooth fa-2x text-primary mb-3"></i>
                             <h5 class="card-title">Dentaire & Optique</h5>
@@ -134,55 +126,62 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 fade-in-up">
-                    <div class="card h-100 text-center border-0 shadow-sm">
+                <div class="col-md-3 text-center">
+                    <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-baby fa-2x text-primary mb-3"></i>
                             <h5 class="card-title">Pédiatrie</h5>
-                            <p class="card-text">Vos enfants méritent un accompagnement médical bienveillant et adapté à
-                                leurs besoins.
-                            </p>
+                            <p class="card-text">Un accompagnement médical bienveillant pour vos enfants.</p>
                         </div>
                     </div>
                 </div>
-                <!-- Ajoute d'autres garanties si besoin -->
             </div>
         </div>
     </section>
 
-    <!-- Bloc attractif LTD HEALTH CLUB -->
-    <div class="container my-5">
-        <div class="bg-white rounded-4 shadow p-4 mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center"
-            style="max-width: 900px;">
-            <div class="mb-3 mb-md-0 me-md-4 flex-shrink-0 text-center">
-                <img src="images/icones.jpg" alt="Booster votre santé" class="img-fluid rounded-4 shadow"
-                    style="max-width: 160px; max-height: 120px; object-fit: cover;">
-            </div>
-            <div class="w-100">
-                <p class="lead mb-4 text-center fade-in-up">
-                    Vous cherchez une clinique adaptée à vos besoins, mais vous ne savez pas par où commencer ?<br>
-                    Vous en avez assez de comparer sans trouver l’option idéale pour votre santé et votre budget ?<br>
-                    Et si la solution était plus proche que vous ne le pensiez ?<br><br>
-                    <strong>Avec LTD HEALTH CLUB, trouvez enfin des partenaires fiables, accessibles et sur
-                        mesure.</strong>
-                </p>
-                <div class="d-flex justify-content-center">
-                    <a href="about.html"
-                        class="btn btn-primary btn-lg d-inline-flex align-items-center gap-2 shadow fade-in-up px-4 py-2 rounded-pill">
-                        <i class="fas fa-concierge-bell fa-lg"></i>
-                        <span>Qui sommes-nous ?</span>
-                    </a>
+    <!-- COMMENT CA MARCHE -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="h3 text-center mb-4 fw-bold">Comment ça marche ?</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-0 shadow-sm text-center">
+                        <div class="card-body">
+                            <i class="fas fa-file-signature fa-2x text-primary mb-3"></i>
+                            <h5 class="card-title">1. Demandez un devis</h5>
+                            <p class="card-text">Remplissez le formulaire ou contactez-nous pour recevoir une
+                                proposition personnalisée.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-0 shadow-sm text-center">
+                        <div class="card-body">
+                            <i class="fas fa-user-check fa-2x text-primary mb-3"></i>
+                            <h5 class="card-title">2. Souscrivez facilement</h5>
+                            <p class="card-text">Choisissez votre formule et bénéficiez de nos garanties santé.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 border-0 shadow-sm text-center">
+                        <div class="card-body">
+                            <i class="fas fa-heartbeat fa-2x text-primary mb-3"></i>
+                            <h5 class="card-title">3. Profitez de la couverture</h5>
+                            <p class="card-text">Accédez à notre réseau de partenaires et bénéficiez d’un accompagnement
+                                personnalisé.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CONTACT RAPIDE -->
     <section class="contact-rapide-section bg-primary text-white py-5 position-relative">
-        <div class="contact-rapide-bg"></div>
         <div class="container position-relative z-1">
             <div class="row justify-content-center">
-                <div class="col-lg-10 mx-auto fade-in-up">
+                <div class="col-lg-10 mx-auto">
                     <div class="card border-0 shadow-lg bg-white bg-opacity-75 rounded-5">
                         <div class="row g-0 align-items-center">
                             <div class="col-md-6 p-4 border-end">
