--- a/index.html
+++ b/index.html
@@ -11,16 +11,98 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #fff;
+            color: #222;
+        }
+
+        .navbar {
+            background-color: #ff6600 !important;
+        }
+
+        .navbar .nav-link,
+        .navbar .navbar-brand {
+            color: #fff !important;
+        }
+
+        .navbar .nav-link.active,
+        .navbar .nav-link:hover {
+            color: #222 !important;
+        }
+
+        .hero-section {
+            background: #222;
+            color: #fff;
+            padding-top: 4rem;
+            padding-bottom: 4rem;
+        }
+
+        .hero-logo {
+            max-width: 220px;
+            border-radius: 1rem;
+            box-shadow: 0 0 24px #ff6600a0;
+            margin-bottom: 2rem;
+            background: #fff;
+            padding: 1rem;
+        }
+
+        .btn-orange {
+            background-color: #ff6600;
+            color: #fff;
+            border: none;
+        }
+
+        .btn-orange:hover {
+            background-color: #e65c00;
+            color: #fff;
+        }
+
+        .section-title {
+            color: #ff6600;
+        }
+
+        .card {
+            border: none;
+        }
+
+        .card-title {
+            color: #ff6600;
+        }
+
+        .bg-light {
+            background-color: #fff !important;
+        }
+
+        .contact-rapide-section {
+            background: #222;
+            color: #fff;
+        }
+
+        .contact-rapide-section .card {
+            background: #fff;
+            color: #222;
+        }
+
+        .footer {
+            background: #222;
+            color: #fff;
+        }
+
+        .footer a {
+            color: #ff6600 !important;
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
 
     <!-- HEADER -->
     <header class="shadow-sm">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0D6EFD;">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="images/logo.jpg" alt="Logo" class="logo me-2">
+                    <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
                     <span class="fw-bold">LTD HEALTH CLUB</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
@@ -28,7 +110,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                        <li class="nav-item"><a href="index.html" class="nav-link active"><i
                                     class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
@@ -47,7 +129,6 @@
                                 <li><a class="dropdown-item" href="partners.html">Nos Partenaires</a></li>
                             </ul>
                         </li>
-
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
                                     class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
                         </li>
@@ -58,12 +139,13 @@
     </header>
 
     <!-- HERO SECTION -->
-    <section class="hero-section bg-primary text-white py-5">
-        <div class="container text-center">
+    <section class="hero-section text-center">
+        <div class="container">
+            <img src="images/logo.jpg" alt="Logo LTD Health Club" class="hero-logo">
             <h1 class="display-4 fw-bold mb-3">Mutuelle Santé LTD HEALTH CLUB</h1>
             <p class="lead mb-4">La mutuelle qui prend soin de vous et de votre famille à Kinshasa.<br>
                 Des garanties adaptées, un accompagnement personnalisé et des remboursements rapides.</p>
-            <a href="contact.html" class="btn btn-light btn-lg px-4"><i class="fas fa-user-plus me-2"></i>Demander un
+            <a href="contact.html" class="btn btn-orange btn-lg px-4"><i class="fas fa-user-plus me-2"></i>Demander un
                 devis</a>
         </div>
     </section>
@@ -76,17 +158,17 @@
                     <img src="images/booste.jpg" alt="Pourquoi choisir LTD" class="img-fluid rounded-4 shadow">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="h3 fw-bold mb-3">Pourquoi choisir LTD HEALTH CLUB ?</h2>
+                    <h2 class="h3 fw-bold mb-3 section-title">Pourquoi choisir LTD HEALTH CLUB ?</h2>
                     <ul class="list-unstyled fs-5">
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des tarifs accessibles
+                        <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Des tarifs accessibles
                             pour tous</li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Un réseau de partenaires
+                        <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Un réseau de partenaires
                             fiables</li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des remboursements rapides
+                        <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Des remboursements rapides
                         </li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Un accompagnement humain
+                        <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Un accompagnement humain
                             et personnalisé</li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i>Des garanties adaptées à
+                        <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Des garanties adaptées à
                             vos besoins</li>
                     </ul>
                 </div>
@@ -97,39 +179,39 @@
     <!-- NOS AVANTAGES -->
     <section class="py-5">
         <div class="container">
-            <h2 class="h3 text-center mb-4 fw-bold">Nos avantages</h2>
+            <h2 class="h3 text-center mb-4 fw-bold section-title">Nos avantages</h2>
             <div class="row g-4 justify-content-center">
                 <div class="col-md-3 text-center">
-                    <div class="card h-100 border-0 shadow-sm">
+                    <div class="card h-100 shadow-sm">
                         <div class="card-body">
-                            <i class="fas fa-hospital fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-hospital fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">Hospitalisation</h5>
                             <p class="card-text">Prise en charge optimale de vos frais d’hospitalisation.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div class="card h-100 border-0 shadow-sm">
+                    <div class="card h-100 shadow-sm">
                         <div class="card-body">
-                            <i class="fas fa-stethoscope fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-stethoscope fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">Soins courants</h5>
                             <p class="card-text">Consultations, analyses, pharmacie, radiologie…</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div class="card h-100 border-0 shadow-sm">
+                    <div class="card h-100 shadow-sm">
                         <div class="card-body">
-                            <i class="fas fa-tooth fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-tooth fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">Dentaire & Optique</h5>
                             <p class="card-text">Des remboursements adaptés pour vos soins dentaires et optiques.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div class="card h-100 border-0 shadow-sm">
+                    <div class="card h-100 shadow-sm">
                         <div class="card-body">
-                            <i class="fas fa-baby fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-baby fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">Pédiatrie</h5>
                             <p class="card-text">Un accompagnement médical bienveillant pour vos enfants.</p>
                         </div>
@@ -142,12 +224,12 @@
     <!-- COMMENT CA MARCHE -->
     <section class="py-5 bg-light">
         <div class="container">
-            <h2 class="h3 text-center mb-4 fw-bold">Comment ça marche ?</h2>
+            <h2 class="h3 text-center mb-4 fw-bold section-title">Comment ça marche ?</h2>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-4">
-                    <div class="card h-100 border-0 shadow-sm text-center">
+                    <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
-                            <i class="fas fa-file-signature fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-file-signature fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">1. Demandez un devis</h5>
                             <p class="card-text">Remplissez le formulaire ou contactez-nous pour recevoir une
                                 proposition personnalisée.</p>
@@ -155,18 +237,18 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card h-100 border-0 shadow-sm text-center">
+                    <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
-                            <i class="fas fa-user-check fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-user-check fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">2. Souscrivez facilement</h5>
                             <p class="card-text">Choisissez votre formule et bénéficiez de nos garanties santé.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card h-100 border-0 shadow-sm text-center">
+                    <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
-                            <i class="fas fa-heartbeat fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-heartbeat fa-2x" style="color:#ff6600;"></i>
                             <h5 class="card-title">3. Profitez de la couverture</h5>
                             <p class="card-text">Accédez à notre réseau de partenaires et bénéficiez d’un accompagnement
                                 personnalisé.</p>
@@ -178,19 +260,21 @@
     </section>
 
     <!-- CONTACT RAPIDE -->
-    <section class="contact-rapide-section bg-primary text-white py-5 position-relative">
+    <section class="contact-rapide-section py-5 position-relative">
         <div class="container position-relative z-1">
             <div class="row justify-content-center">
                 <div class="col-lg-10 mx-auto">
-                    <div class="card border-0 shadow-lg bg-white bg-opacity-75 rounded-5">
+                    <div class="card border-0 shadow-lg rounded-5">
                         <div class="row g-0 align-items-center">
                             <div class="col-md-6 p-4 border-end">
-                                <h2 class="h4 mb-4 text-primary text-center">Nous Contacter Rapidement</h2>
+                                <h2 class="h4 mb-4 section-title text-center">Nous Contacter Rapidement</h2>
                                 <ul class="list-unstyled vstack gap-4">
                                     <li class="d-flex align-items-center">
                                         <span
-                                            class="contact-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3"><i
-                                                class="fas fa-phone fa-lg"></i></span>
+                                            class="contact-icon bg-orange text-white rounded-circle d-flex align-items-center justify-content-center me-3"
+                                            style="background:#ff6600;width:40px;height:40px;"><i
+                                                class="fas fa-phone fa-lg"></i>
+                                        </span>
                                         <div>
                                             <strong>Téléphone :</strong><br>
                                             <a href="tel:+243988212191" class="text-decoration-none text-dark">+243 988
@@ -199,8 +283,10 @@
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <span
-                                            class="contact-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3"><i
-                                                class="fas fa-envelope fa-lg"></i></span>
+                                            class="contact-icon bg-orange text-white rounded-circle d-flex align-items-center justify-content-center me-3"
+                                            style="background:#ff6600;width:40px;height:40px;"><i
+                                                class="fas fa-envelope fa-lg"></i>
+                                        </span>
                                         <div>
                                             <strong>Email :</strong><br>
                                             <a href="mailto:LtdHealthClub10@gmail.com"
@@ -209,8 +295,10 @@
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <span
-                                            class="contact-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3"><i
-                                                class="fas fa-map-marker-alt fa-lg"></i></span>
+                                            class="contact-icon bg-orange text-white rounded-circle d-flex align-items-center justify-content-center me-3"
+                                            style="background:#ff6600;width:40px;height:40px;"><i
+                                                class="fas fa-map-marker-alt fa-lg"></i>
+                                        </span>
                                         <div>
                                             <strong>Adresse :</strong><br>
                                             Avenue Kintambo n°15/Binza Delvaux, Kinshasa
@@ -234,7 +322,7 @@
                                         <textarea class="form-control rounded-3" rows="3" placeholder="Votre message"
                                             required></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-primary w-100 rounded-3">Envoyer <i
+                                    <button type="submit" class="btn btn-orange w-100 rounded-3">Envoyer <i
                                             class="fas fa-paper-plane ms-2"></i></button>
                                 </form>
                             </div>
@@ -246,7 +334,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-white mt-auto py-4">
+    <footer class="footer mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8 text-center">
@@ -259,11 +347,11 @@
                         </small></p>
                 </div>
                 <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="https://facebook.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" class="text-white" target="_blank" rel="noopener"><i
+                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
