--- a/index.html
+++ b/index.html
@@ -11,7 +11,88 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="styles.css">-->
+    <style>
+        body {
+            background-color: #fff;
+            color: #222;
+        }
 
+        .navbar {
+            background-color: #ff6600 !important;
+        }
+
+        .navbar .nav-link,
+        .navbar .navbar-brand {
+            color: #fff !important;
+        }
+
+        .navbar .nav-link.active,
+        .navbar .nav-link:hover {
+            color: #222 !important;
+        }
+
+        .hero-section {
+            background: #222;
+            color: #fff;
+            padding-top: 4rem;
+            padding-bottom: 4rem;
+        }
+
+        .hero-logo {
+            max-width: 220px;
+            border-radius: 1rem;
+            box-shadow: 0 0 24px #ff6600a0;
+            margin-bottom: 2rem;
+            background: #fff;
+            padding: 1rem;
+        }
+
+        .btn-orange {
+            background-color: #ff6600;
+            color: #fff;
+            border: none;
+        }
+
+        .btn-orange:hover {
+            background-color: #e65c00;
+            color: #fff;
+        }
+
+        .section-title {
+            color: #ff6600;
+        }
+
+        .card {
+            border: none;
+        }
+
+        .card-title {
+            color: #ff6600;
+        }
+
+        .bg-light {
+            background-color: #fff !important;
+        }
+
+        .contact-rapide-section {
+            background: #222;
+            color: #fff;
+        }
+
+        .contact-rapide-section .card {
+            background: #fff;
+            color: #222;
+        }
+
+        .footer {
+            background: #222;
+            color: #fff;
+        }
+
+        .footer a {
+            color: #ff6600 !important;
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
