--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a href="index.html" class="nav-link active"><i
                                     class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link"><i
+                        <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
+                                id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
+                                <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
+                                <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
+                                <li><a class="dropdown-item" href="pediatrie.html">Pédiatrie</a></li>
+                                <li><a class="dropdown-item" href="plansPersonnalise.html">Plans personnalisés</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
@@ -42,10 +50,11 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                                 <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
+                                <li><a class="dropdown-item" href="valeurs.html">Nos Valeurs</a></li>
                                 <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
-                                <li><a class="dropdown-item" href="values.html">Nos Valeurs</a></li>
-                                <li><a class="dropdown-item" href="history.html">Notre Histoire</a></li>
-                                <li><a class="dropdown-item" href="partners.html">Nos Partenaires</a></li>
+                                <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
+                                <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
