--- a/mission.html
+++ b/mission.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos - Mutuelle de Santé LTD HEALTH CLUB</title>
+    <title>mission- Mutuelle de Santé LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -12,38 +12,18 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- En-tête -->
-    <header class="shadow-sm">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0D6EFD;">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="images/logo.jpg" alt="Logo" class="logo me-2">
-                    <span class="fw-bold">LTD HEALTH CLUB</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a href="index.html" class="nav-link"><i
-                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link"><i
-                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
-                        </li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link"><i
-                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
     <!-- HERO À PROPOS -->
-    <section class="about-hero-section position-relative mb-5">
-        <div class="about-hero-bg"></div>
-        <div class="container position-relative z-1 py-5 text-center">
-            <h1 class="display-4 fw-bold text-white mb-3">À propos de LTD HEALTH CLUB</h1>
-            <p class="lead text-white mb-0">Découvrez nos valeurs, notre équipe et nos engagements pour votre santé.
+    <section class="hero-section text-center">
+        <div class="container">
+            <img src=" images/logo.jpg" alt="Logo LTD Health Club" class="hero-logo">
+            <h1 class="display-4 fw-bold text-white mb-3">Missions de LTD HEALTH CLUB</h1>
+            <p class="lead mb-4">La mission de LTD HEALTH CLUB est d’assurer à chaque Congolais un accès équitable à des
+                soins médicaux de qualité, sans
+                distinction d’âge, de sexe ou d’état de santé. Fidèle à cet engagement, notre organisation prend en
+                charge les frais
+                médicaux de ses membres, en garantissant leur paiement ou leur remboursement, conformément aux
+                conventions établies avec
+                nos prestataires de santé.
             </p>
         </div>
     </section>
