arrangements_index_active

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a href="index.html" class="nav-link active"><i
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
                                     class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
                         <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
                                 id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
