--- a/valeurs.html
+++ b/valeurs.html
@@ -11,12 +11,10 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <!-- En-tête -->
-    <!-- HEADER (à ajouter en haut, identique à index.html) -->
     <header class="shadow-sm">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
                     <span class="fw-bold">LTD HEALTH CLUB</span>
                 </a>
