--- a/valeurs.html
+++ b/valeurs.html
@@ -88,7 +88,8 @@
                                 <div class="col-md-6 col-lg-3">
                                     <div
                                         class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-hands-helping fa-2x"></i></div>
+                                        <div class="mb-2 text-orange"><i class="fas fa-hands-helping fa-2x"
+                                                style="color: #ff6600;"></i></div>
                                         <h3 class="h5">Solidarité</h3>
                                         <p class="mb-0">Nous croyons en la force du collectif pour faire face aux aléas
                                             de la
@@ -98,7 +99,8 @@
                                 <div class="col-md-6 col-lg-3">
                                     <div
                                         class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-map-marker-alt fa-2x"></i></div>
+                                        <div class="mb-2 text-orange"><i class="fas fa-map-marker-alt fa-2x"
+                                                style="color: #ff6600;"></i></div>
                                         <h3 class="h5">Proximité</h3>
                                         <p class="mb-0">Nous sommes à l'écoute de nos adhérents et nous nous engageons à
                                             leur
@@ -108,7 +110,8 @@
                                 <div class="col-md-6 col-lg-3">
                                     <div
                                         class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-eye fa-2x"></i></div>
+                                        <div class="mb-2 text-orange"><i class="fas fa-eye fa-2x"
+                                                style="color: #ff6600;"></i></div>
                                         <h3 class="h5">Transparence</h3>
                                         <p class="mb-0">Nous garantissons une information claire et accessible sur nos
                                             offres et
@@ -118,7 +121,8 @@
                                 <div class="col-md-6 col-lg-3">
                                     <div
                                         class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-handshake fa-2x"></i></div>
+                                        <div class="mb-2 text-orange"><i class="fas fa-handshake fa-2x"
+                                                style="color: #ff6600;"></i></div>
                                         <h3 class="h5">Engagement</h3>
                                         <p class="mb-0">Nous défendons les intérêts de nos adhérents et promouvons
                                             l'accès aux
