--- a/valeurs.html
+++ b/valeurs.html
@@ -81,8 +81,9 @@
                     <article class="card mb-5 border-0 shadow-sm">
                         <div class="card-body p-4 position-relative bg-transparent">
                             <div class="valeurs-bg-img"></div>
-                            <h2 class="h3 mb-4 text-orange position-relative z-1"><i class="fas fa-heart me-2"></i>Nos
-                                valeurs
+                            <h2 class="h3 mb-4 text-orange text-center position-relative z-1">
+                                <i class="fas fa-heart me-2" style="color: #ff6600;"></i>
+                                Nos valeurs
                             </h2>
                             <div class="row g-4 position-relative z-1">
                                 <div class="col-md-6 col-lg-3">
