arrangements_valeurs_ajout_coleurs_oranges_nos_valeurs_animations

--- a/valeurs.html
+++ b/valeurs.html
@@ -86,44 +86,48 @@
                                 Nos valeurs
                             </h2>
                             <div class="row g-4 position-relative z-1">
-                                <div class="col-md-6 col-lg-3">
+                                <div class="col-12 col-sm-6 col-lg-3">
                                     <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-hands-helping fa-2x"
-                                                style="color: #ff6600;"></i></div>
+                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                                        <div class="mb-2 text-orange">
+                                            <i class="fas fa-hands-helping fa-2x" style="color: #ff6600;"></i>
+                                        </div>
                                         <h3 class="h5">Solidarité</h3>
                                         <p class="mb-0">Nous croyons en la force du collectif pour faire face aux aléas
-                                            de la
-                                            vie.</p>
+                                            de la vie.
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3">
+                                <div class="col-12 col-sm-6 col-lg-3">
                                     <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-map-marker-alt fa-2x"
-                                                style="color: #ff6600;"></i></div>
+                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                                        <div class="mb-2 text-orange">
+                                            <i class="fas fa-map-marker-alt fa-2x" style="color: #ff6600;"></i>
+                                        </div>
                                         <h3 class="h5">Proximité</h3>
                                         <p class="mb-0">Nous sommes à l'écoute de nos adhérents et nous nous engageons à
                                             leur
                                             apporter un service de qualité.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3">
+                                <div class="col-12 col-sm-6 col-lg-3">
                                     <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-eye fa-2x"
-                                                style="color: #ff6600;"></i></div>
+                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                                        <div class="mb-2 text-orange">
+                                            <i class="fas fa-eye fa-2x" style="color: #ff6600;"></i>
+                                        </div>
                                         <h3 class="h5">Transparence</h3>
                                         <p class="mb-0">Nous garantissons une information claire et accessible sur nos
                                             offres et
                                             services.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3">
+                                <div class="col-12 col-sm-6 col-lg-3">
                                     <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-orange"><i class="fas fa-handshake fa-2x"
-                                                style="color: #ff6600;"></i></div>
+                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                                        <div class="mb-2 text-orange">
+                                            <i class="fas fa-handshake fa-2x" style="color: #ff6600;"></i>
+                                        </div>
                                         <h3 class="h5">Engagement</h3>
                                         <p class="mb-0">Nous défendons les intérêts de nos adhérents et promouvons
                                             l'accès aux
