arrangements_missions_ajout_coleurs_oranges_nos_valeurs_animations_contacter_millieu

--- a/mission.html
+++ b/mission.html
@@ -100,8 +100,11 @@
                                         <span class="text-dark">protéger la santé de chacun, quel que soit son âge ou sa
                                             situation.</span>
                                     </div>
-                                    <a href="contact.html" class="btn btn-orange mt-3 valeur-anim"><i
-                                            class="fas fa-envelope me-2"></i>Contactez-nous</a>
+                                    <div class="text-center mt-3">
+                                        <a href="contact.html" class="btn btn-orange valeur-anim">
+                                            <i class="fas fa-envelope me-2"></i>Contactez-nous
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="col-md-6 text-center">
                                     <img src="images/hero_4.jpg" alt="Qui sommes-nous"
