arrangements_missions_ajout_coleurs_oranges_nos_valeurs_animations_contacter_millieu_js_images

--- a/mission.html
+++ b/mission.html
@@ -81,6 +81,11 @@
         <section class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
+                    <!-- Image principale en haut du contenu, style identique à index.html -->
+                    <div class="text-center mb-5">
+                        <img src="images/hero_4.jpg" alt="Mission LTD Health Club" class="img-fluid rounded-4 shadow"
+                            style="max-height:350px; object-fit:cover;">
+                    </div>
                     <!-- Section Qui sommes-nous -->
                     <article class="card mb-5 border-0 shadow-sm valeur-anim">
                         <div class="card-body p-4">
@@ -105,11 +110,6 @@
                                             <i class="fas fa-envelope me-2"></i>Contactez-nous
                                         </a>
                                     </div>
-                                </div>
-                                <div class="col-md-6 text-center">
-                                    <img src="images/hero_4.jpg" alt="Qui sommes-nous"
-                                        class="img-fluid rounded-4 shadow-lg w-100 valeur-img-anim"
-                                        style="max-height: 270px; object-fit: cover;">
                                 </div>
                             </div>
                         </div>
