--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         <div class="container">
             <img src="images/logo.jpg" alt="logo LTD health Club" class="hero-logo">
             <h1 class="display-4 fw-bold mb-3">Contactez-nous</h1>
-            <p class="lead text-white mb-0">Une question ? Un besoin ? Notre équipe vous répond rapidement.</p>
+            <h2 class="h3 fw-bold mb-4 mb-md-0">Une question ? Un besoin ? Notre équipe vous répond rapidement.</h2>
         </div>
     </section>
 
@@ -79,10 +79,9 @@
             <div class="row g-4">
                 <!-- Formulaire de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm border-0 h-100">
+                    <div class="card shadow-sm border-0 h-100" style="color:#ff6600;">
                         <div class="card-body">
-                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"
-                                    style="color:#ff6600;"></i>Formulaire rapide</h2>
+                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
                             <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
                                 novalidate id="contactForm">
                                 <div class="mb-3">
@@ -101,8 +100,8 @@
                                         required></textarea>
                                     <div class="invalid-feedback">Veuillez saisir votre message</div>
                                 </div>
-                                <button type="submit" class="btn btn-primary w-100 py-2" style="color:#ff6600;">
-                                    <i class="fas fa-paper-plane me-2" style="color:#ff6600;"></i>Envoyer
+                                <button type="submit" class="btn btn-primary w-100 py-2">
+                                    <i class="fas fa-paper-plane me-2"></i>Envoyer
                                 </button>
                                 <div class="alert alert-success mt-3 form-success" id="formSuccess"
                                     style="display:none;">
@@ -115,31 +114,36 @@
                 <!-- Informations de contact -->
                 <div class="col-lg-6">
                     <div class="card shadow-sm border-0 h-100">
-                        <div class="card-body">
-                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-address-book me-2"></i>Coordonnées</h2>
-                            <ul class="list-unstyled vstack gap-3 mb-4">
+                        <div class="card-body" style="color:#ff6600;">
+                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-address-book me-2"
+                                    style="color:#ff6600;"></i>Coordonnées</h2>
+                            <ul class="list-unstyled vstack gap-3 mb-4" style="color:#ff6600;">
                                 <li>
-                                    <i class="fas fa-phone me-2 text-primary"></i>
+                                    <i class="fas fa-phone me-2 text-primary" style="color:#ff6600;"></i>
                                     <strong>Téléphone :</strong><br>
-                                    <a href="tel:+243988212191" class="text-decoration-none">+243 988 212 191</a>
+                                    <a href="tel:+243988212191" class="text-decoration-none" style="color:#ff6600;">+243
+                                        988 212 191</a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-envelope me-2 text-primary"></i>
+                                    <i class="fas fa-envelope me-2 text-primary" style="color:#ff6600;"></i>
                                     <strong>Email :</strong><br>
-                                    <a href="mailto:LtdHealthClub10@gmail.com"
-                                        class="text-decoration-none">LtdHealthClub10@gmail.com</a>
+                                    <a href="mailto:LtdHealthClub10@gmail.com" class="text-decoration-none"
+                                        style="color:#ff6600;">LtdHealthClub10@gmail.com</a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-map-marker-alt me-2 text-primary"></i>
+                                    <i class="fas fa-map-marker-alt me-2 text-primary" style="color:#ff6600;"></i>
                                     <strong>Adresse :</strong><br>
                                     Avenue Kintambo n°15/Binza Delvaux, Kinshasa
                                 </li>
                             </ul>
                             <hr>
-                            <p class="text-muted mb-3"><i class="fas fa-clock me-2"></i>Ouvert du lundi au vendredi, de
+                            <p class="text-muted mb-3" style="color:#ff6600;"><i class="fas fa-clock me-2"
+                                    style="color:#ff6600;"></i>Ouvert du
+                                lundi au vendredi, de
                                 9h à 17h
                             </p>
-                            <h3 class="h5 mt-4 mb-3 text-primary"><i class="fas fa-share-alt me-2"></i>Réseaux sociaux
+                            <h3 class="h5 mt-4 mb-3 text-primary" style="color:#ff6600;"><i
+                                    class="fas fa-share-alt me-2" style="color:#ff6600;"></i>Réseaux sociaux
                             </h3>
                             <div class="d-flex gap-3">
                                 <a href="https://facebook.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
