--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,8 @@
                 <!-- Formulaire de contact -->
                 <div class="col-lg-6">
                     <div class="card shadow-sm border-0 h-100" style="color:#ff6600;">
-                        <div class="card-body">
-                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
+                        <div class="card-body p-4">
+                            <h2 class="h3 mb-4 text-orange"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
                             <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
                                 novalidate id="contactForm">
                                 <div class="mb-3">
@@ -113,9 +113,9 @@
                 </div>
                 <!-- Informations de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm border-0 h-100">
+                    <div class="card shadow-sm border-0 h-100" style="color:#ff6600;">
                         <div class="card-body" style="color:#ff6600;">
-                            <h2 class="h4 mb-3 text-primary"><i class="fas fa-address-book me-2"
+                            <h2 class="h3 mb-4 text-orange"><i class="fas fa-address-book me-2"
                                     style="color:#ff6600;"></i>Coordonnées</h2>
                             <ul class="list-unstyled vstack gap-3 mb-4" style="color:#ff6600;">
                                 <li>
@@ -163,7 +163,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-white mt-auto py-4">
+    <footer class="footer mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8 text-center">
@@ -176,11 +176,11 @@
                         </small></p>
                 </div>
                 <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="https://facebook.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" class="text-white" target="_blank" rel="noopener"><i
+                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
